--- a/ejemplo.tex
+++ b/ejemplo.tex
@@ -19,7 +19,7 @@
 
 % Además, algunos comandos de LaTeX escriben texto en el documento,
 % procuraremos que esté en español:
-\usepackage[spanish,es-noquoting,es-lcroman]{babel}
+\usepackage[spanish,es-noquoting,es-lcroman,es-tabla]{babel}
 \selectlanguage{spanish}
 
 % Vamos a incluir algunos paquetes. Los paquetes básicos para
@@ -29,10 +29,20 @@
 % Un paquete más, para poder añadir enlaces
 \usepackage{hyperref}
 
-% Con eso será suficiente por ahora. Recuerda que si quieres que
-% tu documento cuente con alguna funcionalidad fuera de lo
+% Con eso tenemos los paquetes principales. Recuerda que si quieres
+% que tu documento cuente con alguna funcionalidad fuera de lo
 % habitual, suele haber un paquete de LaTeX que la define. Por
 % ejemplo, tablas muy grandes, diagramas, tipografías, etc.
+
+% Ahora incluiremos algunos de estos paquetes que se usarán
+% más adelante en el tutorial
+
+% Para añadir imagenes incluimos algunos paquetes
+\usepackage{float}
+\usepackage{graphicx}
+
+% Incluimos un paquete que nos permite crear gráficos
+\usepackage{tikz}
 
 % Lo último que haremos en este preámbulo será declarar el título
 % y el autor de nuestro documento
@@ -106,8 +116,7 @@ y la segunda no (un resultado similar se consigue con el entorno
 En el modo matemático podemos escribir variedad de símbolos, por
 ejemplo las letras griegas $\alpha, \beta, \gamma$ y las demás. Para
 una referencia más completa, visita
-\href{https://en.wikibooks.org/wiki/LaTeX/Mathematics#List_of_Mathematical_Symbols}{
-  este libro de Wikibooks}.
+\href{https://en.wikibooks.org/wiki/LaTeX/Mathematics#List_of_Mathematical_Symbols}{este libro de Wikibooks}.
 
 \subsection{Más ecuaciones}
 \[
@@ -135,5 +144,54 @@ una referencia más completa, visita
            
 
 \section{Figuras, tablas y otros}
+A menudo se quiere incluir una imagen en el documento. Con el comando \texttt{includegraphics} se añade la imagen al documento, pero para que quede bien posicionada la ponemos en un entorno \texttt{figure}. Además, le podemos añadir un pie de foto que numera automáticamente la imagen con el comando \texttt{caption}.
+
+\begin{figure}[H]
+  \centering
+    \includegraphics{images/kittens.jpeg}
+  \caption{Los gatitos siempre son adorables.}
+\end{figure}
+
+También puedes querer hacer una tabla, como por ejemplo la tabla de sumar en $\mathbb{Z}_2$. Para ello se usa el entorno \texttt{tabular}, aunque hay otros entornos más potentes que se pueden usar para hacer tablas más complejas.
+
+\begin{table}[H]
+  \centering
+  \begin{tabular}{c || c | c}
+    + & 0 & 1 \\ \hline \hline
+    0 & 0 & 1 \\ \hline
+    1 & 1 & 0
+  \end{tabular}
+  \caption{Tabla de sumar de $\mathbb{Z}_2$.}
+\end{table}
+
+A veces también nos interesa crear nuestro propio diagrama cuando es sencillo, y para eso se usa el paquete de gráfiocs tikz. Si conocemos las coordenadas clave del diagrama, con el entorno \texttt{tikzpicture} podemos dibujar cosas simples como una cara sonriente o la solución al problema de la casa que se dibuja sin levantar el boli del papel (ejemplo tomado del Wikibook de \LaTeX):
+
+
+\begin{figure}[H]
+  \centering
+    \begin{tikzpicture}
+      \draw (0,0.2) circle [radius=1];
+      \draw[thick] (-0.2,0.25) -- (-0.2,0.75);
+      \draw[thick] (0.2,0.25) -- (0.2,0.75);
+      \draw[thick] (-0.5,0.2) arc (180:360:0.5);
+    \end{tikzpicture}
+    \begin{tikzpicture}
+      \draw[thick,rounded corners=8pt] (0,0) -- (0,2) -- (1,3.25)
+      -- (2,2) -- (2,0) -- (0,2) -- (2,2) -- (0,0) -- (2,0);
+    \end{tikzpicture}
+\end{figure}
+
+Podemos usar el mismo entorno para dibujar gráficos de funciones (ejemplo tomado del Wikibook de \LaTeX):
+\begin{figure}[H]
+  \centering
+  \begin{tikzpicture}[domain=0:4]
+    \draw[very thin,color=gray] (-0.1,-1.1) grid (3.9,3.9);
+    \draw[->] (-0.2,0) -- (4.2,0) node[right] {$x$};
+    \draw[->] (0,-1.2) -- (0,4.2) node[above] {$f(x)$};
+    \draw[color=red]    plot (\x,\x)             node[right] {$f(x) =x$};
+    \draw[color=blue]   plot (\x,{sin(\x r)})    node[right] {$f(x) = \sin x$};
+    \draw[color=orange] plot (\x,{0.05*exp(\x)}) node[right] {$f(x) = \frac{1}{20} \mathrm e^x$};
+  \end{tikzpicture}
+\end{figure}
 
 \end{document}
