Añade @martaandres como autora y compila

--- a/ejemplo.tex
+++ b/ejemplo.tex
@@ -47,7 +47,7 @@
 % Lo último que haremos en este preámbulo será declarar el título
 % y el autor de nuestro documento
 \title{Ejemplo de documento en LaTeX}
-\author{David Charte}
+\author{Marta Andrés \and David Charte}
 
 % Genial. Ya estamos listos para comenzar a escribir. El contenido
 % hay que englobarlo en el entorno `document` con \begin y \end:
