añado los paquetes a la cabecera
se me había olvidado ^^U

--- a/ejemplo.tex
+++ b/ejemplo.tex
@@ -44,6 +44,12 @@
 % Incluimos un paquete que nos permite crear gráficos
 \usepackage{tikz}
 
+% Paquete para poder incluir código
+\usepackage{minted}
+
+% paquete para poner subfiguras
+\usepackage{subfigure}
+
 % Lo último que haremos en este preámbulo será declarar el título
 % y el autor de nuestro documento
 \title{Ejemplo de documento en LaTeX}
