Corrección sobre un titulín

--- a/latex/ejemplo.tex
+++ b/latex/ejemplo.tex
@@ -248,6 +248,7 @@ $ sudo pacman -S minted
 $ sudo pacman -S python-pygments
 \end{minted}
 
+
 \begin{minted}[frame=single, label={Instalación de minted en Ubuntu}]{console}
 $ sudo apt-get install texlive-latex-extra
 $ sudo apt-get install python-pygments
@@ -281,7 +282,7 @@ Y aquí tenemos el resultado:
 
 Usemos la opción que usemos, para compilar el fichero \LaTeX, tenemos que usar la siguiente orden en la consola:
 
-\begin{minted}[frame=single,label={Lenguajes soportados por minted}]{console}
+\begin{minted}{console}
 $ pdflatex -shell-escape fichero.tex
 \end{minted}
 
